# sin-cpp

./: CMakeLists.txt  Readme.md  pyrightconfig.json
.github/workflows/: ci_generated.yml
ci/: generate_workflows.py  windows.bat  windows.py
examples/compression/: zlib.cpp
examples/container/: error_msg.cpp  kv.cpp  result_code_message.cpp  vector_pair.cpp
examples/json/: number_str.cpp  to_json_value.cpp
examples/str/: to_chars.cpp
examples/type_traits/: is_char.cpp  is_container_1d.cpp  is_container_key_value.cpp  is_string.cpp
include/: sincpp.hpp
include/sincpp/compression/: zlib.hpp
include/sincpp/container/: error_msg.hpp  kv.hpp  result_code_message.hpp  vector_pair.hpp
include/sincpp/json/: to_json_value.hpp
include/sincpp/str/: conv.hpp
include/sincpp/type_traits/: is_char.hpp  is_container_1d.hpp  is_container_key_value.hpp  is_string.hpp
src/: sincpp.cpp
tests/compression/: zlib.cpp
tests/container/: error_msg.cpp  kv.cpp  result_code_message.cpp  vector_pair.cpp
tests/json/: to_json_value.cpp
tests/str/: conv.cpp
tests/type_traits/: is_char.cpp  is_container_1d.cpp  is_container_key_value.cpp  is_string.cpp
